wandb/run-20241014_193952-8uwywecd/files/output.log
Loading checkpoint shards: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:05<00:00,  2.85s/it]
<class 'datasets.arrow_dataset.Dataset'>
--> Training Set Length = 900
--> Validation Set Length = 100
/data/data/arrv/env/tv/lib/python3.12/site-packages/torch/cuda/memory.py:343: FutureWarning: torch.cuda.reset_max_memory_allocated now calls torch.cuda.reset_peak_memory_stats, which resets /all/ peak memory stats.
  warnings.warn(
Training Epoch: 1:   0%|[34m                                                                                                                                                              [0m| 0/450 [00:00<?, ?it/s][0m/data/data/arrv/ThinkTuning_v1/src/think_tuner.py:259: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).
  sampled_token = torch.tensor(topk_indices.indices[i].unsqueeze(0)).to(device=new_sequence.device)  # Add the sampled token
Starting from v4.46, the `logits` model output will have the same type as the model (except at train time, where it will always be FP32)
> [0;32m/data/data/arrv/ThinkTuning_v1/src/think_tuner.py[0m(170)[0;36mthink_loss[0;34m()[0m
[0;32m    169 [0;31m[0;34m[0m[0m
[0m[0;32m--> 170 [0;31m    [0;32mreturn[0m [0mgate_loss[0m[0;34m,[0m [0mreinforce_loss[0m[0;34m,[0m [0mnll_loss_thought[0m[0;34m[0m[0;34m[0m[0m
[0m[0;32m    171 [0;31m[0;34m[0m[0m
[0m
tensor(0.0099, device='cuda:1', grad_fn=<DivBackward0>)
tensor(0.6836)
tensor([0.7161, 0.6319, 0.6648, 0.6981, 0.7073])
*** NameError: name 'reasoning_path' is not defined
*** NameError: name 'reasoning_path' is not defined
tensor([    1, 29871,   243,  ..., 29889,     2,     2], device='cuda:1')
*** SyntaxError: multiple statements found while compiling a single statement
tokenizer_config.json: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1.62k/1.62k [00:00<00:00, 3.46MB/s]
tokenizer.model: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 500k/500k [00:00<00:00, 6.78MB/s]
tokenizer.json: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1.84M/1.84M [00:00<00:00, 6.41MB/s]
special_tokens_map.json: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 414/414 [00:00<00:00, 1.63MB/s]
Traceback (most recent call last):                                                                                                                                                  | 0.00/414 [00:00<?, ?B/s]
"<s> 📣 Pioneer Square Farmers ###Input:\nIf you give 1 kg (kg) 900 grams (g) out of 3 kg (kg) 300 grams (g) of strawberries to a friend, how many grams (g) of strawberries are left? \n###Output:\nFirst, let's convert the total amount of strawberries to grams. \n\n1 kg = 1000 grams\n\nSo, 3 kg 300 grams is:\n3 kg * 1000 g/kg + 300 g = 3000 g + 300 g = 3300 g\n\nNow, let's subtract the amount given to the friend:\n\n1 kg 900 grams is:\n1 kg * 1000 g/kg + 900 g = 1000 g + 900 g = 1900 g\n\nSubtracting the amount given to the friend from the total amount:\n\n3300 g - 1900 g = 1400 g\n\nSo, you are left with 1400 grams of strawberries.</s></s><s> This blog features articles and resources about online training, corpor ###Input:\nIf you give 1 kg (kg) 900 grams (g) out of 3 kg (kg) 300 grams (g) of strawberries to a friend, how many grams (g) of strawberries are left? \n###Output:\nFirst, let's convert the total amount of strawberries to grams. \n\n1 kg = 1000 grams\n\nSo, 3 kg 300 grams is:\n3 kg * 1000 g/kg + 300 g = 3000 g + 300 g = 3300 g\n\nNow, let's subtract the amount given to the friend:\n\n1 kg 900 grams is:\n1 kg * 1000 g/kg + 900 g = 1000 g + 900 g = 1900 g\n\nSubtracting the amount given to the friend from the total amount:\n\n3300 g - 1900 g = 1400 g\n\nSo, you are left with 1400 grams of strawberries.</s></s><s> A lot of people might be happy about the new i ###Input:\nIf you give 1 kg (kg) 900 grams (g) out of 3 kg (kg) 300 grams (g) of strawberries to a friend, how many grams (g) of strawberries are left? \n###Output:\nFirst, let's convert the total amount of strawberries to grams. \n\n1 kg = 1000 grams\n\nSo, 3 kg 300 grams is:\n3 kg * 1000 g/kg + 300 g = 3000 g + 300 g = 3300 g\n\nNow, let's subtract the amount given to the friend:\n\n1 kg 900 grams is:\n1 kg * 1000 g/kg + 900 g = 1000 g + 900 g = 1900 g\n\nSubtracting the amount given to the friend from the total amount:\n\n3300 g - 1900 g = 1400 g\n\nSo, you are left with 1400 grams of strawberries.</s></s><s> I was recently talking with a friend and mentioned that I ###Input:\nIf you give 1 kg (kg) 900 grams (g) out of 3 kg (kg) 300 grams (g) of strawberries to a friend, how many grams (g) of strawberries are left? \n###Output:\nFirst, let's convert the total amount of strawberries to grams. \n\n1 kg = 1000 grams\n\nSo, 3 kg 300 grams is:\n3 kg * 1000 g/kg + 300 g = 3000 g + 300 g = 3300 g\n\nNow, let's subtract the amount given to the friend:\n\n1 kg 900 grams is:\n1 kg * 1000 g/kg + 900 g = 1000 g + 900 g = 1900 g\n\nSubtracting the amount given to the friend from the total amount:\n\n3300 g - 1900 g = 1400 g\n\nSo, you are left with 1400 grams of strawberries.</s></s><s> In what would go on to be a highly controversial ###Input:\nIf you give 1 kg (kg) 900 grams (g) out of 3 kg (kg) 300 grams (g) of strawberries to a friend, how many grams (g) of strawberries are left? \n###Output:\nFirst, let's convert the total amount of strawberries to grams. \n\n1 kg = 1000 grams\n\nSo, 3 kg 300 grams is:\n3 kg * 1000 g/kg + 300 g = 3000 g + 300 g = 3300 g\n\nNow, let's subtract the amount given to the friend:\n\n1 kg 900 grams is:\n1 kg * 1000 g/kg + 900 g = 1000 g + 900 g = 1900 g\n\nSubtracting the amount given to the friend from the total amount:\n\n3300 g - 1900 g = 1400 g\n\nSo, you are left with 1400 grams of strawberries.</s></s>"
*** NameError: name 'selected_indices' is not defined
*** NameError: name 'selected_indices' is not defined
*** NameError: name 'random_indicies' is not defined
  File "/data/data/arrv/ThinkTuning_v1/train.py", line 863, in <module>
    fire.Fire(main)
  File "/data/data/arrv/env/tv/lib/python3.12/site-packages/fire/core.py", line 135, in Fire
    component_trace = _Fire(component, args, parsed_flag_args, context, name)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data/data/arrv/env/tv/lib/python3.12/site-packages/fire/core.py", line 468, in _Fire
    component, remaining_args = _CallAndUpdateTrace(
                                ^^^^^^^^^^^^^^^^^^^^
  File "/data/data/arrv/env/tv/lib/python3.12/site-packages/fire/core.py", line 684, in _CallAndUpdateTrace
    component = fn(*varargs, **kwargs)
                ^^^^^^^^^^^^^^^^^^^^^^
  File "/data/data/arrv/ThinkTuning_v1/train.py", line 847, in main
    results = train(
              ^^^^^^
  File "/data/data/arrv/ThinkTuning_v1/train.py", line 395, in train
    outputs = think_tuner_step(batch, model=model, tokenizer=tokenizer)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data/data/arrv/ThinkTuning_v1/src/think_tuner.py", line 368, in think_tuner_step
    total_gate_loss, total_reinforce_loss, total_nll_thought, logy = start_thinking(batch["input_ids"], batch["prompt_length"], batch["total_length"], outputs.last_hidden_state, logits,  batch["labels"], unreduced_loss, model, tokenizer)
                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data/data/arrv/ThinkTuning_v1/src/think_tuner.py", line 323, in start_thinking
    gate_loss_i, reinforce_loss_i, nll_loss_thought_i = think_loss(zz, idx, new_hidden_states, labels, packed_reasoning_path, model, gate_values, packed, unreduced_loss)
                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data/data/arrv/ThinkTuning_v1/src/think_tuner.py", line 170, in think_loss
    return gate_loss, reinforce_loss, nll_loss_thought
           ^^^^^^^^^
  File "/data/data/arrv/env/tv/lib/python3.12/bdb.py", line 90, in trace_dispatch
    return self.dispatch_line(frame)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data/data/arrv/env/tv/lib/python3.12/bdb.py", line 115, in dispatch_line
    if self.quitting: raise BdbQuit
                      ^^^^^^^^^^^^^
bdb.BdbQuit

If you suspect this is an IPython 8.28.0 bug, please report it at:
    https://github.com/ipython/ipython/issues
or send an email to the mailing list at ipython-dev@python.org

You can print a more detailed traceback right now with "%tb", or use "%debug"
to interactively debug it.

Extra-detailed tracebacks for bug-reporting purposes can be enabled via:
    %config Application.verbose_crash=True
